Fixed image responsivness on smaller devices and added simple hover effect

--- a/frontend/src/app/landing/works/works-list-item/works-list-item.component.scss
+++ b/frontend/src/app/landing/works/works-list-item/works-list-item.component.scss
@@ -16,6 +16,10 @@
   align-items: flex-start;
   justify-content: space-between;
 
+  &:hover > &__image-container > &__image {
+    transform: scale(1);
+  }
+
   &__image-container {
     @include break(large) {
       flex-grow: 0;
@@ -24,7 +28,10 @@
     }
     @include break(small) {
       flex-basis: 90%;
-      height: 100%;
+      height: 30rem;
+    }
+    @include break(xsmall) {
+      height: 25rem;
     }
 
     flex: 1 0 50%;
@@ -37,6 +44,9 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    transform: scale(1.01);
+    transition: transform 0.3s ease-in;
+    transition-delay: 0.3s;
   }
   &__container {
     @include break(large) {
