--- a/frontend/src/app/landing/works/works-list-main-item/works-list-main-item.component.scss
+++ b/frontend/src/app/landing/works/works-list-main-item/works-list-main-item.component.scss
@@ -29,6 +29,9 @@
   &:hover &__latest {
     transform: translateX(0.6rem);
   }
+  &:hover > &__image-container > &__image {
+    transform: scale(1);
+  }
 
   &__latest {
     @include break(large) {
@@ -36,7 +39,6 @@
     }
     @include break(medium) {
       flex-basis: 70%;
-      align-self: fle;
     }
     text-transform: uppercase;
     font-size: 2rem;
@@ -54,15 +56,18 @@
   &__image-container {
     @include break(large) {
       width: 45%;
-      height: 25vh;
+      height: 25rem;
     }
     @include break(medium) {
       // align-self: center;
-      height: 100%;
+      height: 40rem;
       width: 100%;
     }
+    @include break(small) {
+      height: 30rem;
+    }
     width: 100%;
-    height: 30vh;
+    height: 20rem;
     overflow: hidden;
     border-radius: 3rem;
   }
@@ -72,6 +77,9 @@
     object-position: center;
     width: 100%;
     height: 100%;
+    transform: scale(1.01);
+    transition: transform 0.3s ease-in;
+    transition-delay: 0.3s;
   }
 
   &__container {
